# University-projects

Algorithms-and-Data-Structures/: CMakeLists.txt  README.md
Algorithms-and-Data-Structures/Lab 1/Task 1/: main.cpp
Algorithms-and-Data-Structures/Lab 1/Task 2/: main.cpp
Algorithms-and-Data-Structures/Lab 1/Task 3/: main.cpp
Algorithms-and-Data-Structures/Lab 1/Task 4/: main (1).cpp
Algorithms-and-Data-Structures/Lab 1/Task 5/: main.cpp
Algorithms-and-Data-Structures/Lab 10/Task 1/: main.cpp  output.txt
Algorithms-and-Data-Structures/Lab 10/Task 2/: main.cpp  spantree.in  spantree.out
Algorithms-and-Data-Structures/Lab 10/Task 3/: main.cpp
Algorithms-and-Data-Structures/Lab 11/Task 1/: main.cpp
Algorithms-and-Data-Structures/Lab 11/Task 2/: main.cpp  pathsg.in
Algorithms-and-Data-Structures/Lab 11/Task 3/: main.cpp
Algorithms-and-Data-Structures/Lab 11/Task 4/: main.cpp
Algorithms-and-Data-Structures/Lab 11/Task 5/: main.cpp  negcycle.in  negcycle.out
Algorithms-and-Data-Structures/Lab 12/Task 1/: main.cpp
Algorithms-and-Data-Structures/Lab 12/Task 2/: main.cpp
C++ Academic Course/: CMakeLists.txt  README.md
C++ Academic Course/homework1/: NOTE  README.md  geometry.cpp  geometry.h
C++ Academic Course/homework2/: README.md  polynomial.cpp  polynomial.h
C++ Academic Course/homework3/: README.md  SPB_transpornt_data.xml  main.cpp  node.cpp  node.h  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
C++ Academic Course/homework4/: README.md  predicate.hpp
C++ Academic Course/homework5/: CircularBuffer.hpp  README.md
(+184 files in other folders)
